2016-10-20  Eric Herman <eric@freesa.org>

	extract string functions into separate header, sources

	* src/eh-string.h: declare eh_strlen, eh_strncpyl prototypes
	* src/eh-printf.c: moved the string functions to eh-string
	* src/eh-string.c: extracted string functions from eh-printf
	* Makefile.am: include the new headers, sources
	* misc/pre-tidy.patch: include tidy for eh-string.h

2016-10-19  Eric Herman <eric@freesa.org>

	reset the zero_padding and field_size after printing,
	be more robust about the unhandled case.

	* src/eh-printf.c: the reset, more robustness for unhandled
	* tests/test-pct5d.c: test the reset

2016-10-18  Eric Herman <eric@freesa.org>

	add support for "%s" and "%4s"

	* tests/test-str.c: add the test
	* src/eh-printf.c: add code to support "%s"
	* Makefile.am: add the test, quiet valgrind if no error
	* .gitignore: ignore the test


2016-10-17  Eric Herman <eric@freesa.org>

	inline "check_str" from libecheck

	https://github.com/ericherman/libecheck

	* tests/eh-printf-tests.h: copy-paste-tweak check_str
	* tests/test-hex-int.c: include eh-printf-tests.h
	* tests/test-negative.c: include eh-printf-tests.h
	* tests/test-pct5d.c: include eh-printf-tests.h
	* tests/test-simple.c: include eh-printf-tests.h
	* tests/test-unsigned.c: include eh-printf-tests.h
	* Makefile.am: reflect new include
	* configure.ac: remove libecheck reference
	* README: remove reference to libecheck


2016-10-17  Eric Herman <eric@freesa.org>

	Add tests, and supporting code for "%u" and "%lu"

	* src/eh-printf.c: support "%lu"
	* tests/test-unsigned.c: test "%u", "%lu"
	* Makefile.am: include test-unsigned
	* .gitignore: ignore test-unsigned

2016-10-16  Eric Herman <eric@freesa.org>

	Add tests, and supporting code

	* src/eh-printf.c: support "%X", fix negative, "%5d", "%050d"
	* tests/test-hex-int.c: supporting text for "%X"
	* tests/test-negative.c: test a negative val
	* tests/test-pct5d.c: test padding

2016-10-15  Eric Herman <eric@freesa.org>
